--- a/src/font-exporter/templates/scss.hbs
+++ b/src/font-exporter/templates/scss.hbs
@@ -3,7 +3,7 @@
   src: url('./{{familyName}}.otf') format('opentype');
 }
 
-.{{familyName}} {
+.{{className}} {
   font-family: '{{familyName}}';
   font-style: normal;
   font-weight: normal;
